test/test_units/test_kclvm/test_types/invalid_test_data/loop/loop_3.k
x: [int] = [i for i in [0] or ["1"]]
